# proj2

./: Astar.cpp  Astar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.h  Main.cpp  Main.h  MatrixProblem.cpp  MatrixProblem.h  MetrixProblem.cpp  MetrixProblem.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Problem.cpp  Problem.h  ReadFile.cpp  ReadFile.h  Searchable.h  Searcher.h  SearcherSolver.cpp  SearcherSolver.h  Server.h  Solution.cpp  Solution.h  (+8 more)
